[core][experimental] Add mocked tests for accelerated DAG NCCL channel (#45646)
Adds some unit tests that mock out NCCL so that we can test DAGs that use NCCL without requiring CUDA/GPUs.

Signed-off-by: Stephanie Wang <swang@cs.berkeley.edu>
Signed-off-by: Richard Liu <ricliu@google.com>

--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -315,6 +315,7 @@ py_test_module_list(
 py_test_module_list(
   files = [
     "test_channel.py",
+    "test_nccl_channel.py",
   ],
   size = "medium",
   tags = ["exclusive", "accelerated_dag", "no_windows", "team:core"],
