--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -24,7 +24,7 @@ grpcio == 1.54.2; sys_platform == "darwin"
 grpcio >= 1.54.2; sys_platform != "darwin"
 numpy>=1.20
 
-pyarrow >= 6.0.1
+pyarrow!=16.0.1,>=6.0.1
 
 # ray[all]
 smart_open
