--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -12,9 +12,10 @@ py_library(
     srcs = glob(
         ["*.py"],
         exclude = [
+            "__init__.py",
             "test_*.py",
             "cmd_*.py",
-            "mock_module.py",
+            "mock/*.py",
         ],
     ),
     visibility = ["//ci/ray_ci/doc:__subpackages__"],
@@ -23,7 +24,7 @@ py_library(
 py_test(
     name = "test_module",
     size = "small",
-    srcs = ["test_module.py", "mock_module.py"],
+    srcs = ["test_module.py", "__init__.py", "mock/mock_module.py", "mock/__init__.py"],
     exec_compatible_with = ["//:hermetic_python"],
     tags = [
         "ci_unit",
@@ -53,7 +54,7 @@ py_test(
 py_test(
     name = "test_autodoc",
     size = "small",
-    srcs = ["test_autodoc.py"],
+    srcs = ["test_autodoc.py", "__init__.py", "mock/mock_module.py", "mock/__init__.py"],
     exec_compatible_with = ["//:hermetic_python"],
     tags = [
         "ci_unit",
