[doc][api/8] initial lint to enfore api rules
Signed-off-by: can <can@anyscale.com>

--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -15,7 +15,7 @@ py_library(
             "__init__.py",
             "test_*.py",
             "cmd_*.py",
-            "mock/*.py",
+            "__init__.py",
         ],
     ),
     visibility = ["//ci/ray_ci/doc:__subpackages__"],
