[RLlib] Cleanup examples folder #15: Add example script for policy (RLModule) inference w/ ConnectorV2. (#45845)

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -2504,6 +2504,15 @@ py_test(
     args = ["--enable-new-api-stack", "--stop-reward=100.0"]
 )
 
+py_test(
+    name = "examples/inference/policy_inference_after_training_w_connector",
+    main = "examples/inference/policy_inference_after_training_w_connector.py",
+    tags = ["team:rllib", "exclusive", "examples"],
+    size = "medium",
+    srcs = ["examples/inference/policy_inference_after_training_w_connector.py"],
+    args = ["--enable-new-api-stack", "--stop-reward=150.0"]
+)
+
 #@OldAPIStack
 py_test(
     name = "examples/inference/policy_inference_after_training_with_attention_tf",
