--- a/.buildkite/others.rayci.yml
+++ b/.buildkite/others.rayci.yml
@@ -1,6 +1,5 @@
 group: others
 depends_on:
-  - oss-ci-base_build
   - forge
 steps:
   #build
@@ -18,10 +17,9 @@ steps:
       - ./ci/ci.sh compile_pip_dependencies
       - cp -f ./python/requirements_compiled.txt /artifact-mount/
     soft_fail: true
-    job_env: oss-ci-base_build-py3.11
+    job_env: oss-ci-base_test-py3.11
     depends_on:
-      - forge
-      - oss-ci-base_build-multipy
+      - oss-ci-base_test-multipy
 
   # test
   - label: doc tests
