--- a/.buildkite/release/build.rayci.yml
+++ b/.buildkite/release/build.rayci.yml
@@ -3,7 +3,7 @@ steps:
   - label: ":tapioca: build: anyscale py{{matrix.python}}-{{matrix.platform}} docker"
     tags: skip-on-premerge
     key: anyscalebuild
-    instance_type: release
+    instance_type: release-medium
     commands:
       - bazel run //ci/ray_ci:build_in_docker -- anyscale 
         --python-version {{matrix.python}} --platform {{matrix.platform}} 
@@ -27,7 +27,7 @@ steps:
   - label: ":tapioca: build: anyscale-ml py{{matrix}}-cu11.8.0 docker"
     tags: skip-on-premerge
     key: anyscalemlbuild
-    instance_type: release
+    instance_type: release-medium
     commands:
       - bazel run //ci/ray_ci:build_in_docker -- anyscale --python-version {{matrix}}
         --platform cu11.8.0 --image-type ray-ml --upload
