[ci] temporary disable flaky dag tests
Signed-off-by: Matthew Deng <matt@anyscale.com>

--- a/python/ray/dag/BUILD
+++ b/python/ray/dag/BUILD
@@ -72,8 +72,9 @@ py_test(
 
 py_test_module_list(
   files = [
-    "tests/experimental/test_accelerated_dag.py",
-    "tests/experimental/test_torch_tensor_dag.py",
+    # Commented out tests are flaky and not ready to be run in CI yet.
+    # "tests/experimental/test_accelerated_dag.py", 
+    # "tests/experimental/test_torch_tensor_dag.py",
   ],
   size = "medium",
   tags = ["exclusive", "accelerated_dag", "no_windows", "team:core"],
