Revert "[ci] temporarily disable flaky dag tests (#46065)"
This reverts commit b0071bcdfd56e9a237a6296b2c7b64732ad5e1b7.

Signed-off-by: Rui Qiao <ruisearch42@gmail.com>

--- a/python/ray/dag/BUILD
+++ b/python/ray/dag/BUILD
@@ -76,8 +76,7 @@ py_test_module_list(
     "tests/experimental/test_torch_tensor_dag.py",
   ],
   size = "medium",
-  # Marking these as manual until they are deflaked.
-  tags = ["exclusive", "accelerated_dag", "no_windows", "team:core", "manual"],
+  tags = ["exclusive", "accelerated_dag", "no_windows", "team:core"],
   deps = ["//:ray_lib"],
 )
 
