[train v2][3/n] Add `WorkerGroup` and `RayTrainWorker` implementations (#680)
This PR adds the `WorkerGroup` interface, which is largely copied over
from the existing code, with a few new methods (`run_train_fn`,
`poll_status`) that are depended on by the controller.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -689,6 +689,14 @@ py_test(
     deps = [":train_lib", ":conftest"],
 )
 
+py_test(
+    name = "test_worker_group_v2",
+    size = "small",
+    srcs = ["v2/tests/test_worker_group_v2.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = [":train_lib", ":conftest"],
+)
+
 # This is a dummy test dependency that causes the above tests to be
 # re-run if any of these files changes.
 py_library(
