[train v2][4/n] Add default `FailurePolicy` implementation for feature parity (#681)
This PR adds a `FailurePolicy` that achieves feature parity with the
`FailureConfig(max_failures)` as well as preempted special case error
handling.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -15,6 +15,14 @@ py_test(
 )
 
 py_test(
+    name = "test_failure_policy",
+    size = "small",
+    srcs = ["tests/test_failure_policy.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib"],
+)
+
+py_test(
     name = "test_worker_group_v2",
     size = "small",
     srcs = ["tests/test_worker_group_v2.py"],
