[train v2][6-9/n] Add `TrainContext` to hold global training information on each worker (#684)
This PR is the combination of these other PRs:
* Base PR
* Adds the `TrainContext` and `DistributedContext`, which contains the
global context information for each worker. This `TrainContext` gets
initialized on each worker before training starts.
* https://github.com/anyscale/runtime/pull/685
* Adds the `SynchronizationActor` which allows us to enforce a barrier
in checkpointing.
* https://github.com/anyscale/runtime/pull/686
    * Brings over some relevant `StorageContext` utilities into v2.
* https://github.com/anyscale/runtime/pull/687

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -23,6 +23,22 @@ py_test(
 )
 
 py_test(
+    name = "test_storage",
+    size = "small",
+    srcs = ["tests/test_storage.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib"],
+)
+
+py_test(
+    name = "test_sync_actor",
+    size = "small",
+    srcs = ["tests/test_sync_actor.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib"],
+)
+
+py_test(
     name = "test_worker_group_v2",
     size = "small",
     srcs = ["tests/test_worker_group_v2.py"],
