--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2049,6 +2049,7 @@ ray_cc_library(
         ":ray_common",
         "//src/ray/util",
         "@boost//:asio",
+        "@zstd//:libzstd",
     ],
 )
 
