--- a/.buildkite/rllib.rayci.yml
+++ b/.buildkite/rllib.rayci.yml
@@ -209,6 +209,7 @@ steps:
     depends_on: rllibgpubuild
 
   - label: ":brain: rllib: flaky multi-gpu tests"
+    key: rllib_flaky_gpu_tests
     tags: 
       - rllib
       - skip-on-premerge
@@ -224,6 +225,7 @@ steps:
     soft_fail: true
 
   - label: ":brain: rllib: flaky tests (learning tests)"
+    key: rllib_flaky_tests_01
     tags: 
       - rllib
       - skip-on-premerge
@@ -252,6 +254,7 @@ steps:
     soft_fail: true
 
   - label: ":brain: rllib: flaky tests (examples/rlmodule/models/tests_dir)"
+    key: rllib_flaky_tests_02
     tags: 
       - rllib
       - skip-on-premerge
@@ -286,6 +289,7 @@ steps:
     soft_fail: true
 
   - label: ":brain: rllib: flaky tests (memory leak)"
+    key: rllib_flaky_tests_03
     tags: 
       - rllib
       - skip-on-premerge
