[train v2][11/n] Add `Result` output for `DataParallelTrainer.fit` (#695)
Adds the `Result`, which achieves API parity for `DataParallelTrainer.fit`.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -31,6 +31,14 @@ py_test(
 )
 
 py_test(
+    name = "test_result",
+    size = "small",
+    srcs = ["tests/test_result.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib"],
+)
+
+py_test(
     name = "test_storage",
     size = "small",
     srcs = ["tests/test_storage.py"],
