[train v2][12/n] Add `AcceleratorSetupCallback` for sharing `CUDA_VISIBLE_DEVICES` (#700)
Add logic for sharing `CUDA_VISIBLE_DEVICES` across workers on
the same node using an `AcceleratorSetupCallback`.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Matthew Deng <matt@anyscale.com>
Co-authored-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -1,4 +1,12 @@
 py_test(
+    name = "test_accelerator_utils",
+    size = "small",
+    srcs = ["tests/test_accelerator_utils.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib"],
+)
+
+py_test(
     name = "test_checkpoint_handler",
     size = "small",
     srcs = ["tests/test_checkpoint_handler.py"],
