[train v2][13/n] Add `RAY_TRAIN_V2_ENABLED` environment variable to route API implementations (#701)
Adds `RAY_TRAIN_V2_ENABLED`, which replaces the implementation of the
following `ray.train` APIs: `get_context`, `report`, `get_checkpoint`,
`get_dataset_chard`, `ScalingConfig`, `RunConfig`.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Hongpeng Guo <hpguo@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -4,6 +4,7 @@ py_test(
     srcs = ["tests/test_accelerator_utils.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -12,6 +13,7 @@ py_test(
     srcs = ["tests/test_checkpoint_handler.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -20,6 +22,7 @@ py_test(
     srcs = ["tests/test_controller.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -28,6 +31,7 @@ py_test(
     srcs = ["tests/test_data_parallel_trainer.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -36,6 +40,7 @@ py_test(
     srcs = ["tests/test_failure_policy.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -44,6 +49,7 @@ py_test(
     srcs = ["tests/test_result.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -52,6 +58,7 @@ py_test(
     srcs = ["tests/test_storage.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -60,6 +67,7 @@ py_test(
     srcs = ["tests/test_sync_actor.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -68,4 +76,5 @@ py_test(
     srcs = ["tests/test_worker_group_v2.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
