[train v2][15/n] Improve logging in execution policies and port over integration tests (#712)
Adds more controller logs to describe which scaling/failure decisions
are being made, and the reasoning behind them.

This PR also includes some drive-by fixes:
1. Shut down the worker group when switching to `RECOVERING`.
2. Ray auto initialization on `TrainController.run`.
3. Propagate a fixed set of environment variables from the driver to all
worker actors.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Hongpeng Guo <hpguo@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -1,10 +1,14 @@
+py_library(
+    name = "conftest",
+    srcs = ["tests/conftest.py"]
+)
+
 py_test(
     name = "test_accelerator_utils",
     size = "small",
     srcs = ["tests/test_accelerator_utils.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -12,8 +16,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_checkpoint_handler.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -21,8 +24,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_controller.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -30,8 +32,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_data_parallel_trainer.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -39,8 +40,15 @@ py_test(
     size = "small",
     srcs = ["tests/test_failure_policy.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
+)
+
+py_test(
+    name = "test_persistence",
+    size = "medium",
+    srcs = ["tests/test_persistence.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -48,8 +56,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_result.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -57,8 +64,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_storage.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -66,8 +72,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_sync_actor.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
 
 py_test(
@@ -75,6 +80,5 @@ py_test(
     size = "small",
     srcs = ["tests/test_worker_group_v2.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
-    deps = ["//:ray_lib"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    deps = ["//:ray_lib", ":conftest"],
 )
