Fixed an arguments bug in 'ActionMaskingRLM._compute_values' and a wrong name in the BUILD file.
Signed-off-by: simonsays1980 <simon.zehnder@gmail.com>

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -2957,7 +2957,7 @@ py_test(
 )
 
 py_test(
-    name = "examples/rl_modules/action_masking_rlm.py",
+    name = "examples/rl_modules/action_masking_rlm",
     main = "examples/rl_modules/action_masking_rlm.py",
     tags = ["team:rllib", "examples"],
     size = "medium",
