--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -548,23 +548,25 @@ py_test(
     args = ["--as-test", "--enable-new-api-stack", "--num-agents=2", "--num-gpus=1"]
 )
 
-py_test(
-    name = "learning_tests_multi_agent_pendulum_sac_multi_cpu",
-    main = "tuned_examples/sac/multi_agent_pendulum_sac.py",
-    tags = ["team:rllib", "exclusive", "learning_tests", "torch_only", "learning_tests_pendulum", "learning_tests_continuous"],
-    size = "large",
-    srcs = ["tuned_examples/sac/multi_agent_pendulum_sac.py"],
-    args = ["--as-test", "--enable-new-api-stack", "--num-agents=2", "--num_gpus=2"]
-)
+# Does not run (yet) due to dynamic computation graphs in SAC that get propagated 
+# thorugh backwards multiple times (problem with nn.parallel.DistributedDataParallel).
+# py_test(
+#     name = "learning_tests_multi_agent_pendulum_sac_multi_cpu",
+#     main = "tuned_examples/sac/multi_agent_pendulum_sac.py",
+#     tags = ["team:rllib", "exclusive", "learning_tests", "torch_only", "learning_tests_pendulum", "learning_tests_continuous"],
+#     size = "large",
+#     srcs = ["tuned_examples/sac/multi_agent_pendulum_sac.py"],
+#     args = ["--as-test", "--enable-new-api-stack", "--num-agents=2", "--num-gpus=2"]
+# )
 
-py_test(
-    name = "learning_tests_multi_agent_pendulum_sac_multi_gpu",
-    main = "tuned_examples/sac/multi_agent_pendulum_sac.py",
-    tags = ["team:rllib", "exclusive", "learning_tests", "torch_only", "learning_tests_pendulum", "learning_tests_continuous", "multi_gpu"],
-    size = "large",
-    srcs = ["tuned_examples/sac/multi_agent_pendulum_sac.py"],
-    args = ["--enable-new-api-stack", "--num-agents=2", "--num-gpus=2"]
-)
+# py_test(
+#     name = "learning_tests_multi_agent_pendulum_sac_multi_gpu",
+#     main = "tuned_examples/sac/multi_agent_pendulum_sac.py",
+#     tags = ["team:rllib", "exclusive", "learning_tests", "torch_only", "learning_tests_pendulum", "learning_tests_continuous", "multi_gpu"],
+#     size = "large",
+#     srcs = ["tuned_examples/sac/multi_agent_pendulum_sac.py"],
+#     args = ["--enable-new-api-stack", "--num-agents=2", "--num-gpus=2"]
+# )
 
 #@OldAPIStack
 py_test(
